Fix spacing of page elements when flash is present
## Problem:

The header bar and flashes interacted strangely,
causing the flash to push other elements way down the page.

## Solution:

Create a pseudoelement before the main content
that offsets the rest of the page appropriately.

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -19,6 +19,10 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -$page-width / 2;
     width: $page-width;
   }
 
