--- a/app/assets/stylesheets/refills/_flashes.scss
+++ b/app/assets/stylesheets/refills/_flashes.scss
@@ -12,7 +12,6 @@ $success-color: #e6efc2 !default;
   margin-bottom: $base-spacing / 2;
   padding: $base-spacing / 2;
   text-align: center;
-  margin-top: $header-height;
 
   a {
     color: darken($color, 70%);
